fix:图片选择器与页面z-index冲突

--- a/app/mvip-manager/src/pages/shop/[id]/module-management/components/content/components/components/select-item/components/target-component/components/content-item/index.less
+++ b/app/mvip-manager/src/pages/shop/[id]/module-management/components/content/components/components/select-item/components/target-component/components/content-item/index.less
@@ -21,7 +21,7 @@
           border-radius: 2px;
           border: 1px solid #d9d9d9;
           font-size: 12px;
-          z-index: 1000;
+          z-index: 100;
           cursor: pointer;
           &.selected {
             border-color: #096dd9;
@@ -35,7 +35,7 @@
           position: absolute;
           top: 0;
           left: 0;
-          z-index: 10;
+          z-index: 1;
           background-color: rgba(0, 0, 0, 0.44);
           cursor: pointer;
         }
@@ -45,7 +45,7 @@
           position: absolute;
           bottom: 0;
           right: 0;
-          z-index: 1000;
+          z-index: 100;
           cursor: pointer;
         }
         .status {
@@ -58,7 +58,7 @@
           position: absolute;
           top: 0;
           left: 0;
-          z-index: 100;
+          z-index: 10;
           color: #fff;
           padding: 0 20px;
           overflow: hidden;
